# wsgi-auth-middleware

./: LICENSE.txt  README.md  pyproject.toml
src/wsgi_auth_middleware/: __about__.py  __init__.py
src/wsgi_auth_middleware/backends/: __init__.py  gssapi.py  pam.py
src/wsgi_auth_middleware/frontends/: __init__.py  basic.py  negotiate.py
src/wsgi_auth_pam/: __about__.py  __init__.py  middleware.py
tests/: __init__.py  server_test.py  test_negotiate_gssapi.py
